# Launcher

./: .gitignore  README.md  astro.config.mjs  bun.lockb  flake.nix  package-lock.json  package.json  renovate.json  tailwind.config.mjs
.astro/: icon.d.ts
.github/workflows/: deploy.yml  publish.yml
nix/: cargo-tauri.nix  deafult.nix  overlay.nix
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: deafult.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/licences/: Minecraft-essnetials-header.md
src-tauri/src/: desktop.rs  lib.rs  main.rs  mobile.rs
src-tauri/src/auth/: bearer_token.rs  mod.rs  server.rs  xbox.rs  xsts.rs
src/components/: Greet.svelte  error.astro  gradientColorPicker.astro  hero.astro  launchbar.astro  layout.astro  newsitem.astro  playercard.astro  playitem.astro  settings-item.astro  settingsitem.astro  side.astro  sidebar.astro  titlebar.astro  top.astro  topbar.astro
src/components/quickplay/: item.astro  list.astro
src/layouts/: Layout.astro  layout.astro
src/pages/: customize.astro  index.astro  mods.astro  picker.astro  servers.astro  settings.astro
src/types/: tauri.d.ts
themes/: readme.md
