[package]
name = "teaclient"
version = "0.2.0"
description = "A OpenSourced Client That looks nice.."
authors = ["TeaClient Maintainers"]
license = "EPL-2.0"
repository = "https://github.com/teaclientmc/launcher"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api"] }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }


serde_json = "1.0.116"
serde = "1.0.199"
tokio = { version = "1.37", features = ["macros", "full"] }
minecraft-essentials = { git = "https://github.com/minecraft-essentials/minecraft-essentials", features = ["tauri"], branch = "tauri-support"}
open = "5.1.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = { version = "2.0.0-beta.3" }
