[package]
name = "teaclient"
version = "0.2.0"
description = "A OpenSourced Client That looks nice.."
authors = ["TeaClient Maintainers"]
license = "EPL-2.0"
repository = "https://github.com/teaclientmc/launcher"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "macos-private-api"] }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2"}
tauri-plugin-fs ={ git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2"}


serde_json = "1.0.116"
serde = "1.0.199"
tokio = { version = "1.37", features = ["full"] }
minecraft-essentials = "0.2.11"
open = "5.1.2"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
